# hale-bopp-argos

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/core/: audit.py  rules.py
app/models/: schemas.py
docs/: ARCHITECTURE_OVERVIEW.md
tests/: test_api.py  test_rules.py
