[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hale-bopp-argos"
version = "0.1.0"
description = "Policy gating and data quality engine — rule-based governance, audit logging"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.28"]

[tool.pytest.ini_options]
testpaths = ["tests"]
